10-17 css wrapping fixed, added check for spaces in topic

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,3 @@
-.jumbotron {
-	
-	background-color: Black;
-
-}
-
-h1 {
-	
-	font-family: 'Nosifer', cursive;
-	color: #B40404;
-	text-align: center;
-
-
-}
 
 body {
 
@@ -20,39 +6,84 @@ body {
 	background-color: #FF8000;
 }
 
+h1 {
+	
+	font-family: 'Nosifer', cursive;
+	color: #FF8000;
+	text-align: center;
+}
+
+label {
+
+	font-size: 26px;
+	font-weight: bolder;
+	background-color: Black;
+	color: #FF8000;
+	padding-top: 3px;
+	padding-bottom: 3px;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+button {
+
+	margin: 15px;
+}
+
+button:hover {
+
+	color: #FF8000;
+	background-color: Black;
+}
+
+.jumbotron {
+	
+	background-color: Black;
+}
+
+.topic {
+
+	font-size: 26px;
+	font-weight: bold;
+}
+
 .rating {
 
-	font-size: 18px;
+	font-size: 20px;
 	font-weight: bold;
-	/*display: inline-block;*/
-/*	position: relative;
-	left: 0
-	bottom: 210px;
-*/}
+}
+
+.topic-fig {
+
+	display: inline-block;
+	padding-right: 20px;
+	padding-left: 20px;
+}
 
 #topic-form {
 
 	text-align: center;
 	padding: 40px;
-}
-
-.topic-fig {
-
-/*	float left;
-*/	display: inline-block;
-	padding-right: 20px;
-	padding-left: 20px;
-}
-
-label {
-	font-size: 26px;
-	font-weight: bolder;
-	
+	background-color: Black;
+	margin-top: 20px;
+	margin-bottom: 40px;
 }
 
 #add-topic {
+
 	font-size: 26px;
 	font-weight: bolder;
+	background-color: #FF8000;
+}
 
-	
+#add-topic:hover {
+
+	color: #FF8000;
+	background-color: Black;
+}
+
+#topic-input {
+
+	font-size: 26px;
+	font-weight: bolder;
 }
